TAG: littriageload-6-0-14-4
TAG: littriageload-6-0-14-3
TAG: littriageload-6-0-14-2
TAG: littriageload-6-0-14-1
DATE: 04/03/2019, 05/06/2018
STAFF: lec 
TR12963/teleuse-to-mgd_java_api
- add bib_workflow_tag_seq reset

TAG: littriageload-6-0-12-17
DATE: 03/04/2019
STAFF: lec
CHANGES: TR13046/supplement/add new term to setSupplmental

TAG: littriageload-6-0-12-16
TAG: littriageload-6-0-12-15
DATE: 10/11/2018, 10/17/2018
STAFF: lec
CHANGES: TR12958/add littriage_discard folder

TAG: littriageload-6-0-12-14
TAG: littriageload-6-0-12-13
TAG: littriageload-6-0-12-12
DATE: 08/27/2018
STAFF: lec
CHANGES: TR12929
1) input directory archived fro 14 days
2) added Mismatch counts to top of curator log

TAG: littriageload-6-0-12-11
DATE: 07/30/2018
STAFF: lec
CHANGES: 
1) TR12844/check for duplicate PDF names in input folder

TAG: littriageload-6-0-12-10
DATE: 06/20/2018
STAFF: lec
CHANGES: 
1) TR12844/ignore duplicates in processPDFs()
2) TR12881/add vol, issue, pgs to "None" -> null

TAG: littriageload-6-0-12-9
TAG: littriageload-6-0-12-8
TAG: littriageload-6-0-12-7
TAG: littriageload-6-0-12-6
DATE: 06/05/2018, 06/06/2018
STAFF: lec
CHANGES: TR12881
add vol, issue, pgs to "None" -> null

TAG: littriageload-6-0-12-5
TAG: littriageload-6-0-12-4
DATE: 05/18/2018
STAFF: lec
CHANGES: TR12829/Populate DOI for peer reviewed articles
add findNLMrefresh.sh script

TAG: littriageload-6-0-12-3
TAG: littriageload-6-0-12-2
DATE: 04/03/2018, 05/01/2018
STAFF: lec
CHANGES: TR12829/Populate DOI for peer reviewed articles

TAG: littriageload-6-0-12-1
DATE: 03/07/2018
STAFF: lec
CHANGES:
changed bib_workflow_status_serial to bib_workflow_status_seq

TAG: littriageload-6-0-11-35
DATE: 01/18/2018
STAFF: lec
CHANGES:
1)TR12747/publication type : turn on with fix

TAG: littriageload-6-0-11-34
DATE: 01/18/2018
STAFF: lec
CHANGES:
1)TR12747/publication type : turn off & fix bug

TAG: littriageload-6-0-11-33
DATE: 12/27/2017
STAFF: lec
CHANGES:
1)TR12747/publication type
2)TR12756/duplicate log
