@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-14-5
+DATE: 08/20/2019
+STAFF: lec 
+TR13152/fix setSupplemental()
+
 TAG: littriageload-6-0-14-4
 TAG: littriageload-6-0-14-3
 TAG: littriageload-6-0-14-2
